--- a/person-proyect/package.json
+++ b/person-proyect/package.json
@@ -13,7 +13,9 @@
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "3.4.1",
+    "react-spinner": "^0.2.7",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   },
